[package]
name = "bypass"
version = "0.1.0"
edition = "2024"
description = "Shortcut API CLI – bulk create Objectives, Epics, and Stories"

[[bin]]
name = "bypass"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
clap        = { version = "4", features = ["derive", "env"] }
csv         = "1"
calamine    = "0.23"
colored     = "2"
indicatif   = "0.18"
dirs        = "5"
unit-prefix = "0.5.2"
